feat: register OpenStack connections with unscoped tokens
